[gd_scene load_steps=14 format=3 uid="uid://1b2ikdanl66b"]

[ext_resource type="Script" path="res://Scenes/CardPrinter/card_printer.gd" id="1_qft15"]
[ext_resource type="PackedScene" uid="uid://dsasunnk47n8o" path="res://Scenes/item_card.tscn" id="2_hegq8"]
[ext_resource type="PackedScene" uid="uid://dixtx38u4jhd7" path="res://Scenes/UI/card_hand.tscn" id="3_wygtg"]
[ext_resource type="Script" path="res://Scripts/interact_button.gd" id="4_eavi1"]
[ext_resource type="AudioStream" uid="uid://dknygn5eyuhxt" path="res://shot1.wav" id="5_m033a"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s02au"]
albedo_color = Color(0.203922, 0.592157, 0.592157, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_0ebt5"]
size = Vector3(2, 2.1, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_yf4je"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_3q3h0"]
viewport_path = NodePath("SubViewport2")

[sub_resource type="ViewportTexture" id="ViewportTexture_vyyy4"]
viewport_path = NodePath("SubViewport3")

[sub_resource type="BoxShape3D" id="BoxShape3D_ikdwj"]
size = Vector3(1.29447, 0.342125, 0.277604)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_73g2w"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("5_m033a")
stream_0/weight = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_gv3t5"]
size = Vector3(0.617184, 0.869944, 0.0570252)

[node name="CardPrinter" type="StaticBody3D" node_paths=PackedStringArray("cards", "button_collider", "button_box", "choice_colliders")]
script = ExtResource("1_qft15")
cards = [NodePath("SubViewport/Node2D"), NodePath("SubViewport2/Node2D"), NodePath("SubViewport3/Node2D")]
item_card_scene = ExtResource("2_hegq8")
button_collider = NodePath("StaticBody3D/CollisionShape3D2")
button_box = NodePath("StaticBody3D/CollisionShape3D2/CSGBox3D")
choice_colliders = [NodePath("StaticBody3D2/CollisionShape3D2"), NodePath("StaticBody3D3/CollisionShape3D2"), NodePath("StaticBody3D4/CollisionShape3D2")]

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0)
size = Vector3(2, 2.1, 1)
material = SubResource("StandardMaterial3D_s02au")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0)
shape = SubResource("BoxShape3D_0ebt5")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(352, 512)
render_target_update_mode = 4

[node name="Node2D" parent="SubViewport" instance=ExtResource("3_wygtg")]
position = Vector2(-56, 0)

[node name="SubViewport2" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(352, 512)
render_target_update_mode = 4

[node name="Node2D" parent="SubViewport2" instance=ExtResource("3_wygtg")]
position = Vector2(-56, 0)

[node name="SubViewport3" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(352, 512)
render_target_update_mode = 4

[node name="Node2D" parent="SubViewport3" instance=ExtResource("3_wygtg")]
position = Vector2(-56, 0)

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.149617, 0)
visible = false

[node name="Sprite3D" type="Sprite3D" parent="Node3D"]
transform = Transform3D(0.175, 0, 0, 0, 0.175, 0, 0, 0, 0.175, -0.65, 1.65, 0.506948)
texture_filter = 0
texture = SubResource("ViewportTexture_yf4je")

[node name="Sprite3D2" type="Sprite3D" parent="Node3D"]
transform = Transform3D(0.175, 0, 0, 0, 0.175, 0, 0, 0, 0.175, 0, 1.65, 0.506948)
texture_filter = 0
texture = SubResource("ViewportTexture_3q3h0")

[node name="Sprite3D3" type="Sprite3D" parent="Node3D"]
transform = Transform3D(0.175, 0, 0, 0, 0.175, 0, 0, 0, 0.175, 0.65, 1.65, 0.506948)
texture_filter = 0
texture = SubResource("ViewportTexture_vyyy4")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.847404, 0.610684)
collision_layer = 16
collision_mask = 0
script = ExtResource("4_eavi1")
press_cost = 15
hover_text = "[center]#Interact# to spend $15 on random card"

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_ikdwj")

[node name="CSGBox3D" type="CSGBox3D" parent="StaticBody3D/CollisionShape3D2"]
size = Vector3(1.29447, 0.342125, 0.277604)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.010989, -0.086501)
stream = SubResource("AudioStreamRandomizer_73g2w")
bus = &"SFX"

[node name="StaticBody3D2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.650194, 1.50143, 0.528758)
collision_layer = 16
collision_mask = 0
script = ExtResource("4_eavi1")
hover_text = "Select card"

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D2"]
shape = SubResource("BoxShape3D_gv3t5")
disabled = true

[node name="StaticBody3D3" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000848182, 1.5001, 0.528758)
collision_layer = 16
collision_mask = 0
script = ExtResource("4_eavi1")
button_press_value = 1
hover_text = "Select card"

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D3"]
shape = SubResource("BoxShape3D_gv3t5")
disabled = true

[node name="StaticBody3D4" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.648946, 1.49865, 0.528758)
collision_layer = 16
collision_mask = 0
script = ExtResource("4_eavi1")
button_press_value = 2
hover_text = "Select card"

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D4"]
shape = SubResource("BoxShape3D_gv3t5")
disabled = true

[connection signal="button_interacted" from="StaticBody3D" to="." method="_on_static_body_3d_button_interacted"]
[connection signal="button_interacted" from="StaticBody3D2" to="." method="retrieve_card"]
[connection signal="button_interacted" from="StaticBody3D3" to="." method="retrieve_card"]
[connection signal="button_interacted" from="StaticBody3D4" to="." method="retrieve_card"]
